@@ -26,17 +26,7 @@ name|java
 operator|.
 name|io
 operator|.
-name|IOException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|InputStream
+name|*
 import|;
 end_import
 
@@ -117,6 +107,20 @@ operator|.
 name|util
 operator|.
 name|Set
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|io
+operator|.
+name|IOUtils
 import|;
 end_import
 
@@ -650,8 +654,22 @@ name|Sets
 import|;
 end_import
 
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|io
+operator|.
+name|Closeables
+import|;
+end_import
+
 begin_comment
-comment|/**  * Search results clustering engine based on Carrot2 clustering algorithms.  *<p/>  * Output from this class is subject to change.  *  * @link http://project.carrot2.org  */
+comment|/**  * Search results clustering engine based on Carrot2 clustering algorithms.  *<p/>  * Output from this class is subject to change.  *  * @see "http://project.carrot2.org"  */
 end_comment
 
 begin_class
@@ -725,6 +743,350 @@ name|IClusteringAlgorithm
 argument_list|>
 name|clusteringAlgorithmClass
 decl_stmt|;
+DECL|class|SolrResourceLocator
+specifier|private
+specifier|static
+class|class
+name|SolrResourceLocator
+implements|implements
+name|IResourceLocator
+block|{
+DECL|field|resourceLoader
+specifier|private
+specifier|final
+name|SolrResourceLoader
+name|resourceLoader
+decl_stmt|;
+DECL|field|carrot2ResourcesDir
+specifier|private
+specifier|final
+name|String
+name|carrot2ResourcesDir
+decl_stmt|;
+DECL|method|SolrResourceLocator
+specifier|public
+name|SolrResourceLocator
+parameter_list|(
+name|SolrCore
+name|core
+parameter_list|,
+name|SolrParams
+name|initParams
+parameter_list|)
+block|{
+name|resourceLoader
+operator|=
+name|core
+operator|.
+name|getResourceLoader
+argument_list|()
+expr_stmt|;
+name|carrot2ResourcesDir
+operator|=
+name|initParams
+operator|.
+name|get
+argument_list|(
+name|CarrotParams
+operator|.
+name|LEXICAL_RESOURCES_DIR
+argument_list|,
+name|CARROT_RESOURCES_PREFIX
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getAll
+specifier|public
+name|IResource
+index|[]
+name|getAll
+parameter_list|(
+specifier|final
+name|String
+name|resource
+parameter_list|)
+block|{
+specifier|final
+name|String
+name|resourceName
+init|=
+name|carrot2ResourcesDir
+operator|+
+literal|"/"
+operator|+
+name|resource
+decl_stmt|;
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"Looking for Solr resource: "
+operator|+
+name|resourceName
+argument_list|)
+expr_stmt|;
+name|InputStream
+name|resourceStream
+init|=
+literal|null
+decl_stmt|;
+specifier|final
+name|byte
+index|[]
+name|asBytes
+decl_stmt|;
+try|try
+block|{
+name|resourceStream
+operator|=
+name|resourceLoader
+operator|.
+name|openResource
+argument_list|(
+name|resourceName
+argument_list|)
+expr_stmt|;
+name|asBytes
+operator|=
+name|IOUtils
+operator|.
+name|toByteArray
+argument_list|(
+name|resourceStream
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|RuntimeException
+name|e
+parameter_list|)
+block|{
+name|log
+operator|.
+name|debug
+argument_list|(
+literal|"Resource not found in Solr's config: "
+operator|+
+name|resourceName
+operator|+
+literal|". Using the default "
+operator|+
+name|resource
+operator|+
+literal|" from Carrot JAR."
+argument_list|)
+expr_stmt|;
+return|return
+operator|new
+name|IResource
+index|[]
+block|{}
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"Could not read Solr resource "
+operator|+
+name|resourceName
+argument_list|)
+expr_stmt|;
+return|return
+operator|new
+name|IResource
+index|[]
+block|{}
+return|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|resourceStream
+operator|!=
+literal|null
+condition|)
+name|Closeables
+operator|.
+name|closeQuietly
+argument_list|(
+name|resourceStream
+argument_list|)
+expr_stmt|;
+block|}
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Loaded Solr resource: "
+operator|+
+name|resourceName
+argument_list|)
+expr_stmt|;
+specifier|final
+name|IResource
+name|foundResource
+init|=
+operator|new
+name|IResource
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|InputStream
+name|open
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+operator|new
+name|ByteArrayInputStream
+argument_list|(
+name|asBytes
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+comment|// In case multiple resources are found they will be deduped, but we don't use it in Solr,
+comment|// so simply rely on instance equivalence.
+return|return
+name|super
+operator|.
+name|hashCode
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|obj
+parameter_list|)
+block|{
+comment|// In case multiple resources are found they will be deduped, but we don't use it in Solr,
+comment|// so simply rely on instance equivalence.
+return|return
+name|super
+operator|.
+name|equals
+argument_list|(
+name|obj
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"Solr config resource: "
+operator|+
+name|resourceName
+return|;
+block|}
+block|}
+decl_stmt|;
+return|return
+operator|new
+name|IResource
+index|[]
+block|{
+name|foundResource
+block|}
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+comment|// In case multiple locations are used locators will be deduped, but we don't use it in Solr,
+comment|// so simply rely on instance equivalence.
+return|return
+name|super
+operator|.
+name|hashCode
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|obj
+parameter_list|)
+block|{
+comment|// In case multiple locations are used locators will be deduped, but we don't use it in Solr,
+comment|// so simply rely on instance equivalence.
+return|return
+name|super
+operator|.
+name|equals
+argument_list|(
+name|obj
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|toString
+specifier|public
+name|String
+name|toString
+parameter_list|()
+block|{
+return|return
+literal|"SolrResourceLocator, "
+operator|+
+literal|"configDir="
+operator|+
+operator|new
+name|File
+argument_list|(
+name|resourceLoader
+operator|.
+name|getConfigDir
+argument_list|()
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+operator|+
+literal|", Carrot2 relative lexicalResourcesDir="
+return|;
+block|}
+block|}
 annotation|@
 name|Override
 annotation|@
@@ -1127,154 +1489,14 @@ argument_list|(
 operator|new
 name|ResourceLookup
 argument_list|(
+comment|// Solr-specific resource loading.
 operator|new
-name|IResourceLocator
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|IResource
-index|[]
-name|getAll
-parameter_list|(
-specifier|final
-name|String
-name|resource
-parameter_list|)
-block|{
-specifier|final
-name|SolrResourceLoader
-name|resourceLoader
-init|=
+name|SolrResourceLocator
+argument_list|(
 name|core
-operator|.
-name|getResourceLoader
-argument_list|()
-decl_stmt|;
-specifier|final
-name|String
-name|carrot2ResourcesDir
-init|=
-name|initParams
-operator|.
-name|get
-argument_list|(
-name|CarrotParams
-operator|.
-name|LEXICAL_RESOURCES_DIR
 argument_list|,
-name|CARROT_RESOURCES_PREFIX
+name|initParams
 argument_list|)
-decl_stmt|;
-try|try
-block|{
-name|log
-operator|.
-name|debug
-argument_list|(
-literal|"Looking for "
-operator|+
-name|resource
-operator|+
-literal|" in "
-operator|+
-name|carrot2ResourcesDir
-argument_list|)
-expr_stmt|;
-specifier|final
-name|InputStream
-name|resourceStream
-init|=
-name|resourceLoader
-operator|.
-name|openResource
-argument_list|(
-name|carrot2ResourcesDir
-operator|+
-literal|"/"
-operator|+
-name|resource
-argument_list|)
-decl_stmt|;
-name|log
-operator|.
-name|info
-argument_list|(
-name|resource
-operator|+
-literal|" loaded from "
-operator|+
-name|carrot2ResourcesDir
-argument_list|)
-expr_stmt|;
-specifier|final
-name|IResource
-name|foundResource
-init|=
-operator|new
-name|IResource
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|InputStream
-name|open
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-return|return
-name|resourceStream
-return|;
-block|}
-block|}
-decl_stmt|;
-return|return
-operator|new
-name|IResource
-index|[]
-block|{
-name|foundResource
-block|}
-return|;
-block|}
-catch|catch
-parameter_list|(
-name|RuntimeException
-name|e
-parameter_list|)
-block|{
-comment|// No way to distinguish if the resource was found but failed
-comment|// to load or wasn't found at all, so we simply fall back
-comment|// to Carrot2 defaults here by returning an empty locations array.
-name|log
-operator|.
-name|debug
-argument_list|(
-name|resource
-operator|+
-literal|" not found in "
-operator|+
-name|carrot2ResourcesDir
-operator|+
-literal|". Using the default "
-operator|+
-name|resource
-operator|+
-literal|" from Carrot JAR."
-argument_list|)
-expr_stmt|;
-return|return
-operator|new
-name|IResource
-index|[]
-block|{}
-return|;
-block|}
-block|}
-block|}
 argument_list|,
 comment|// Using the class loader directly because this time we want to omit the prefix
 operator|new
